# cikon-iot-solution

./: .gitignore  compile_commands.json
.github/: copilot-instructions.md
components/cikon_certs/: .gitignore  CMakeLists.txt  certs.c.external  certs.c.in  certs.c.internal  idf_component.yml
components/cikon_certs/include/: certs.h
components/cikon_config/: CMakeLists.txt  config_manager.c  idf_component.yml
components/cikon_config/include/: config_fields_private.h.example  config_manager.h
components/cikon_core/: CMakeLists.txt  Kconfig  idf_component.yml  platform_services.c
components/cikon_core/include/: platform_services.h
components/cikon_esp_now/: CMakeLists.txt  Kconfig  cikon_esp_now.c  idf_component.yml
components/cikon_esp_now/include/: cikon_esp_now.h  esp_now_protocols.h
components/cikon_ethernet/: CMakeLists.txt  Kconfig  ethernet.c  ethernet_backend_openeth.c  ethernet_backend_w5500.c  idf_component.yml
components/cikon_ethernet/include/: ethernet.h  ethernet_backend.h
components/cikon_helpers/: CMakeLists.txt  debug.c  idf_component.yml  json_parser.c  net.c  time_helpers.c
components/cikon_helpers/include/: bits_helper.h  enum_helpers.h  metadata.h  net.h  task_helpers.h  time_helpers.h
components/cikon_http/: CMakeLists.txt  Kconfig  cikon_http.c  http_server.c  idf_component.yml  webdav.c
components/cikon_http/include/: cikon_http.h  http_server.h  webdav.h
components/cikon_http/pages/: app.js  index.html  style.css
components/cikon_https/: CMakeLists.txt  Kconfig  https_server.c  idf_component.yml
components/cikon_https/include/: https_server.h
components/cikon_inet_common/: CMakeLists.txt  idf_component.yml  inet_common.c
components/cikon_inet_common/include/: inet_common.h
components/cikon_mesh_lite/: CMakeLists.txt  Kconfig  idf_component.yml  mesh_lite.c
components/cikon_mesh_lite/include/: mesh_lite.h
components/cikon_mqtt/: CMakeLists.txt  Kconfig  ha.c  idf_component.yml  mqtt.c
components/cikon_mqtt/include/: ha.h  mqtt.h
components/cikon_neopixel/: CMakeLists.txt  Kconfig  idf_component.yml  neopixel.c  neopixel_effects.c
components/cikon_neopixel/include/: neopixel.h  neopixel_colors.h  neopixel_effects.h
components/cikon_rf433_receiver/: CMakeLists.txt  Kconfig  idf_component.yml  rf433_receiver.c
components/cikon_supervisor/: CMakeLists.txt  Kconfig  README.md  cmnd.c  cmnd_core_handlers.c  idf_component.yml  supervisor.c  tele.c
components/cikon_supervisor/include/: cmnd.h  supervisor.h  tele.h
components/cikon_supervisor_adapters/cikon_supervisor_adapters_button/: CMakeLists.txt  Kconfig  button.c  idf_component.yml
components/cikon_supervisor_adapters/cikon_supervisor_adapters_debug/: CMakeLists.txt  debug.c  idf_component.yml
components/cikon_supervisor_adapters/cikon_supervisor_adapters_ds18b20/: CMakeLists.txt  Kconfig  ds18b20.c  idf_component.yml
components/cikon_supervisor_adapters/cikon_supervisor_adapters_ds18b20/include/: ds18b20_adapter.h
components/cikon_supervisor_adapters/cikon_supervisor_adapters_esp_now_rx/: CMakeLists.txt  Kconfig  esp_now_rx.c  idf_component.yml
components/cikon_supervisor_adapters/cikon_supervisor_adapters_inet/: CMakeLists.txt  idf_component.yml  inet.c
components/cikon_supervisor_adapters/cikon_supervisor_adapters_inet_ethernet/: CMakeLists.txt  idf_component.yml  inet_ethernet.c
components/cikon_supervisor_adapters/cikon_supervisor_adapters_inet_mesh/: CMakeLists.txt  Kconfig  idf_component.yml  inet_mesh.c
components/cikon_supervisor_adapters/cikon_supervisor_adapters_led/: CMakeLists.txt  Kconfig  cmnd_led_handlers.c  idf_component.yml  led.c  tele_led_appenders.c
components/cikon_supervisor_adapters/cikon_supervisor_adapters_led/include/: cmnd_led_handlers.h  led_adapter.h  tele_led_appenders.h
components/cikon_supervisor_adapters/cikon_supervisor_adapters_led_indicator/: CMakeLists.txt  Kconfig  idf_component.yml  led_indicator.c
components/cikon_supervisor_adapters/cikon_supervisor_adapters_neopixel/: CMakeLists.txt  idf_component.yml  neopixel.c
components/cikon_supervisor_adapters/cikon_supervisor_adapters_rf433/: CMakeLists.txt  Kconfig  idf_component.yml  rf433.c
components/cikon_supervisor_adapters/cikon_supervisor_adapters_thread_border_router/: CMakeLists.txt  Kconfig  idf_component.yml  thread_border_router_adapter.c
components/cikon_supervisor_adapters/cikon_supervisor_adapters_thread_br/: CMakeLists.txt  Kconfig  idf_component.yml  thread_br_adapter.c
components/cikon_supervisor_adapters/cikon_supervisor_adapters_thread_br/include/: thread_br_adapter.h
components/cikon_supervisor_adapters/cikon_supervisor_adapters_thread_device/: CMakeLists.txt  Kconfig  idf_component.yml  thread_device_adapter.c
components/cikon_supervisor_adapters/cikon_supervisor_adapters_zigbee/: CMakeLists.txt  idf_component.yml  zigbee.c
components/cikon_supervisor_button/: CMakeLists.txt  Kconfig  idf_component.yml
components/cikon_supervisor_debug/: CMakeLists.txt  debug.c  idf_component.yml
components/cikon_supervisor_debug/include/: debug_adapter.h
components/cikon_supervisor_inet/: CMakeLists.txt  cmnd_inet_handlers.c  idf_component.yml  inet.c
components/cikon_supervisor_inet/include/: cmnd_inet_handlers.h  inet_adapter.h
components/cikon_supervisor_rf433/: CMakeLists.txt  Kconfig  idf_component.yml  rf433.c
components/cikon_supervisor_zigbee/: CMakeLists.txt  idf_component.yml  zigbee.c
components/cikon_tcp_monitor/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  tcp_monitor.c
components/cikon_tcp_ota/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  tcp_ota.c
components/cikon_thread_common/: CMakeLists.txt  Kconfig  idf_component.yml  thread_common.c
components/cikon_wifi/: CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml  wifi.c
components/protocol_examples_common/: CMakeLists.txt
tools/certs/: README.md  make-certs-client.sh  make-certs-server.sh  make-certs.sh
tools/vsconf/: README.md  riscv_settings.json  xtensa_settings.json
(+15 files in other folders)
