idf_component_register(
    SRCS
        "platform_services.c"
    INCLUDE_DIRS
        "include"
    PRIV_REQUIRES
        app_update
        esp_driver_gpio
        esp_driver_tsens
        esp_event
        spi_flash
        esp_hw_support
        esp_timer
        nvs_flash
        vfs
        spiffs
)
