idf_component_register(
    SRCS
        "supervisor.c"
        "cmnd.c"
        "tele.c"
        "cmnd_core_handlers.c"
        "tele_core_appenders.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        cjson
        esp_event
        freertos
        cikon_helpers
        cikon_core
        cikon_config
)
