idf_component_register(
    SRCS
        "inet.c"
        "cmnd_inet_handlers.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        cikon_supervisor
        cikon_wifi
        cikon_mqtt
        cikon_https
        cikon_tcp_ota
        cikon_tcp_monitor
        cikon_config
        cikon_core
    PRIV_REQUIRES
        esp_wifi
        mdns
        esp_netif_stack
)
